# zero_copy_mydoc

./: README.md
src/my_zero_copy_pkg/: CMakeLists.txt  package.xml
src/my_zero_copy_pkg/config/: fastdds_setup.xml
src/my_zero_copy_pkg/docs/: fastdds_doc.md  message_doc.md  subscriber_doc.md  troubleshooting.md
src/my_zero_copy_pkg/msg/: FixedArray40k.msg
src/my_zero_copy_pkg/src/: loaned_publisher.cpp  loaned_subscriber.cpp  standard_publisher.cpp  standard_subscriber.cpp
src/my_zero_copy_pkg_40k/: CMakeLists.txt  package.xml
src/my_zero_copy_pkg_40k/config/: fastdds_setup.xml
src/my_zero_copy_pkg_40k/docs/: fastdds_doc.md  publisher_doc.md  troubleshooting.md
src/my_zero_copy_pkg_40k/msg/: FixedArray40k.msg
src/my_zero_copy_pkg_40k/src/: loaned_publisher.cpp  loaned_subscriber.cpp  standard_publisher.cpp  standard_subscriber.cpp  zero_copy_node.cpp
src/my_zero_copy_pkg_40k/tutorial/: 01_creazione_package.md  02_messaggio_custom.md  03_configurazione_fastdds.md  04_publisher_standard.md  05_subscriber_standard.md  06_publisher_loaned.md  07_subscriber_loaned.md  08_compilazione_test.md  09_verifica_shm.md  README.md
